Changed endpoint paths. Fixed tests
