# management_layer/api/stubs.py
@@ -345,6 +345,26 @@ class AbstractStubClass(object):
         """
         raise NotImplementedError()
 
+    # purge_expired_invitations_ac -- Synchronisation point for meld
+    @staticmethod
+    async def purge_expired_invitations_ac(request, **kwargs):
+        """
+        :param request: An HttpRequest
+        :param cutoff_date (optional): string An optional cutoff date to purge invites before this date
+        :returns: result or (result, headers) tuple
+        """
+        raise NotImplementedError()
+
+    # purge_expired_invitations_as -- Synchronisation point for meld
+    @staticmethod
+    async def purge_expired_invitations_as(request, **kwargs):
+        """
+        :param request: An HttpRequest
+        :param cutoff_date (optional): string An optional cutoff date to purge invites before this date
+        :returns: result or (result, headers) tuple
+        """
+        raise NotImplementedError()
+
     # invitationsiterole_list -- Synchronisation point for meld
     @staticmethod
     async def invitationsiterole_list(request, **kwargs):
@@ -430,26 +450,6 @@ class AbstractStubClass(object):
         """
         :param request: An HttpRequest
         :param domain_id: integer A unique integer value identifying the domain.
-        :returns: result or (result, headers) tuple
-        """
-        raise NotImplementedError()
-
-    # purge_expired_invitations_ac -- Synchronisation point for meld
-    @staticmethod
-    async def purge_expired_invitations_ac(request, **kwargs):
-        """
-        :param request: An HttpRequest
-        :param cutoff_date (optional): string An optional cutoff date to purge invites before this date
-        :returns: result or (result, headers) tuple
-        """
-        raise NotImplementedError()
-
-    # purge_expired_invitations_as -- Synchronisation point for meld
-    @staticmethod
-    async def purge_expired_invitations_as(request, **kwargs):
-        """
-        :param request: An HttpRequest
-        :param cutoff_date (optional): string An optional cutoff date to purge invites before this date
         :returns: result or (result, headers) tuple
         """
         raise NotImplementedError()
@@ -2148,6 +2148,36 @@ class MockedStubClass(AbstractStubClass):
         return MockedStubClass.GENERATOR.random_value(response_schema)
 
     @staticmethod
+    async def purge_expired_invitations_ac(request, **kwargs):
+        """
+        :param request: An HttpRequest
+        :param cutoff_date (optional): string An optional cutoff date to purge invites before this date
+        """
+        response_schema = schemas.purged_invitations
+        if "type" not in response_schema:
+            response_schema["type"] = "object"
+
+        if response_schema["type"] == "array" and "type" not in response_schema["items"]:
+            response_schema["items"]["type"] = "object"
+
+        return MockedStubClass.GENERATOR.random_value(response_schema)
+
+    @staticmethod
+    async def purge_expired_invitations_as(request, **kwargs):
+        """
+        :param request: An HttpRequest
+        :param cutoff_date (optional): string An optional cutoff date to purge invites before this date
+        """
+        response_schema = schemas.__UNSPECIFIED__
+        if "type" not in response_schema:
+            response_schema["type"] = "object"
+
+        if response_schema["type"] == "array" and "type" not in response_schema["items"]:
+            response_schema["items"]["type"] = "object"
+
+        return MockedStubClass.GENERATOR.random_value(response_schema)
+
+    @staticmethod
     async def invitationsiterole_list(request, **kwargs):
         """
         :param request: An HttpRequest
@@ -2368,36 +2398,6 @@ class MockedStubClass(AbstractStubClass):
     },
     "type": "array"
 }""")
-        if "type" not in response_schema:
-            response_schema["type"] = "object"
-
-        if response_schema["type"] == "array" and "type" not in response_schema["items"]:
-            response_schema["items"]["type"] = "object"
-
-        return MockedStubClass.GENERATOR.random_value(response_schema)
-
-    @staticmethod
-    async def purge_expired_invitations_ac(request, **kwargs):
-        """
-        :param request: An HttpRequest
-        :param cutoff_date (optional): string An optional cutoff date to purge invites before this date
-        """
-        response_schema = schemas.purged_invitations
-        if "type" not in response_schema:
-            response_schema["type"] = "object"
-
-        if response_schema["type"] == "array" and "type" not in response_schema["items"]:
-            response_schema["items"]["type"] = "object"
-
-        return MockedStubClass.GENERATOR.random_value(response_schema)
-
-    @staticmethod
-    async def purge_expired_invitations_as(request, **kwargs):
-        """
-        :param request: An HttpRequest
-        :param cutoff_date (optional): string An optional cutoff date to purge invites before this date
-        """
-        response_schema = schemas.__UNSPECIFIED__
         if "type" not in response_schema:
             response_schema["type"] = "object"
 
