# management_layer/api/urls.py
@@ -52,8 +52,6 @@ def add_routes(app, with_ui=False):
     app.router.add_view(r"/ops/user_domain_permissions/{user_id}/{domain_id}", views.OpsUserDomainPermissionsUserIdDomainId)
     app.router.add_view(r"/ops/site_role_labels_aggregated/{site_id}", views.OpsSiteRoleLabelsAggregatedSiteId)
     app.router.add_view(r"/ops/site_and_domain_roles/{site_id}", views.OpsSiteAndDomainRolesSiteId)
-    app.router.add_view(r"/ops/purge_expired_invitations_as", views.OpsPurgeExpiredInvitationsAs)
-    app.router.add_view(r"/ops/purge_expired_invitations_ac", views.OpsPurgeExpiredInvitationsAc)
     app.router.add_view(r"/ops/get_sites_under_domain/{domain_id}", views.OpsGetSitesUnderDomainDomainId)
     app.router.add_view(r"/ops/get_site_from_client_token_id/{client_token_id}", views.OpsGetSiteFromClientTokenIdClientTokenId)
     app.router.add_view(r"/ops/domain_roles/{domain_id}", views.OpsDomainRolesDomainId)
@@ -62,6 +60,8 @@ def add_routes(app, with_ui=False):
     app.router.add_view(r"/invitationsiteroles", views.Invitationsiteroles)
     app.router.add_view(r"/invitations/{invitation_id}/send", views.InvitationsInvitationIdSend)
     app.router.add_view(r"/invitations/{invitation_id}", views.InvitationsInvitationId)
+    app.router.add_view(r"/invitations/purge/as", views.InvitationsPurgeAs)
+    app.router.add_view(r"/invitations/purge/ac", views.InvitationsPurgeAc)
     app.router.add_view(r"/invitations", views.Invitations)
     app.router.add_view(r"/invitationdomainroles/{invitation_id}/{domain_id}/{role_id}", views.InvitationdomainrolesInvitationIdDomainIdRoleId)
     app.router.add_view(r"/invitationdomainroles", views.Invitationdomainroles)
